// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IndexedFieldsTable should filter based on the query bar 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "HyperSec",
          "excluded": false,
          "format": "",
          "info": Array [],
          "name": "HyperSec",
          "searchable": true,
          "type": "string",
        },
      ]
    }
  />
</div>
`;

exports[`IndexedFieldsTable should filter based on the type filter 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "timestamp",
          "excluded": false,
          "format": "",
          "info": Array [],
          "name": "timestamp",
          "type": "date",
        },
      ]
    }
  />
</div>
`;

exports[`IndexedFieldsTable should render normally 1`] = `
<div>
  <Table
    editField={[Function]}
    indexPattern={
      Object {
        "getFormatterForFieldNoDefault": [Function],
        "getNonScriptedFields": [Function],
      }
    }
    items={
      Array [
        Object {
          "displayName": "HyperSec",
          "excluded": false,
          "format": "",
          "info": Array [],
          "name": "HyperSec",
          "searchable": true,
          "type": "string",
        },
        Object {
          "displayName": "timestamp",
          "excluded": false,
          "format": "",
          "info": Array [],
          "name": "timestamp",
          "type": "date",
        },
        Object {
          "displayName": "conflictingField",
          "excluded": false,
          "format": "",
          "info": Array [],
          "name": "conflictingField",
          "type": "conflict",
        },
      ]
    }
  />
</div>
`;
